trying to fix safari flicker in conversations list

--- a/app/less/app.less
+++ b/app/less/app.less
@@ -1296,14 +1296,6 @@ i.icon-verified {
   word-wrap: break-word;
 }
 
-.im_dialog_message_typing,
-.im_dialog_message_wtyping .im_dialog_message_notyping {
-  display: none;
-}
-.im_dialog_message_wtyping .im_dialog_message_typing {
-  display: block;
-}
-
 
 a.im_dialog {
   .im_dialog_chat_from_wrap,
@@ -1431,6 +1423,10 @@ a.im_dialog_selected {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+}
+.im_dialog_message_wrap {
+  height: 44px;
+  overflow: hidden;
 }
 .im_dialog_message {
   color: #808080;
